--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Lab 2</title>
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
@@ -23,7 +23,7 @@
 
   <main>
     <section class="about">
-      <p>chirpus inc.</p>
+      <h2>chirpus inc.</h2>
       <p class="about_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet qui in ipsum fugiat atque obcaecati repellendus sunt, delectus a optio magni dolorum eligendi sapiente ut ab, dignissimos aliquam. Ducimus, natus? Amet qui in ipsum fugiat atque obcaecati repellendus sunt, delectus a optio magni dolorum eligendi sapiente ut ab, dignissimos aliquam. Ducimus, natus? Amet qui in ipsum fugiat atque obcaecati repellendus sunt, delectus a optio magni dolorum eligendi sapiente ut ab, dignissimos aliquam. Ducimus, natus?</p>
     </section>
     <section class="circles">
